# projects

./: README.md
aws_lambda/: readme.md
aws_lambda/lambda_bootstrap/src/: lib.rs
aws_lambda/lambda_bootstrap/src/lambda/: event.rs  event_loop.rs  mod.rs  response.txt
aws_lambda/lambda_test/: Cargo.toml  bootstrap
aws_lambda/lambda_test/src/: main.rs
rust/aws_lambda/: build.sh  readme.md
rust/aws_lambda/lambda_bootstrap/: Cargo.toml
rust/aws_lambda/lambda_bootstrap/src/events/: aws_lambda.rs  mod.rs
rust/aws_lambda/lambda_bootstrap/src/lambda/: event_loop.rs  response_body.rs
rust/aws_lambda/lambda_test/: build.sh
rust/aws_lambda/lambda_test/src/: main.rs
