[package]
name = "lambda_bootstrap"
version = "0.0.1"
authors = ["Emmanuel Thioux <emmanuelt@cybcube.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
threadpool = "1.8.1"
num_cpus = "1.13.0"
minreq = {version = "2.6.0", features = ["json-using-serde"] }
json = "0.12.4"
